crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_filter_by_query_text.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"filter\", \"--query\", \"rust\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode filter --query rust
exit: 0
--- stdout ---
{
  "memories": [
    {
      "memory": {
        "accessed_at": "[TIMESTAMP]",
        "challenges": [],
        "confidence": 0.8,
        "content": "Chosen for the memory-safety guarantees.",
        "created_at": "[TIMESTAMP]",
        "criticality": 0.9,
        "decay": {
          "floor": 0.0,
          "strategy": "none"
        },
        "epistemic": "decision",
        "id": "[UUID]",
        "logical": [
          "core.lang"
        ],
        "physical": [
          "src/main.rs"
        ],
        "provenance": {
          "source": "human"
        },
        "status": "Active",
        "summary": "Use Rust for the backend",
        "supersedes": [],
        "tags": [
          "rust",
          "backend"
        ],
        "title": "Use Rust Backend",
        "type": "decision",
        "updated_at": "[TIMESTAMP]",
        "visibility": "Shared"
      },
      "score": 0.922519819845859
    }
  ],
  "total": 1
}
--- stderr ---
