crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_filter_by_type.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"filter\", \"--query\", \"e\", \"-t\", \"hazard\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode filter --query e -t hazard
exit: 0
--- stdout ---
{
  "memories": [],
  "total": 0
}
--- stderr ---
