crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_filter_min_criticality_alone_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"filter\", \"--min-criticality\", \"0.5\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode filter --min-criticality 0.5
exit: 1
--- stdout ---
--- stderr ---
Error: Validation error: mode=filter requires at least one of: query, logical, path, tags
