crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_filter_no_matches.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"filter\", \"--query\", \"zzzznotpresent\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode filter --query zzzznotpresent
exit: 0
--- stdout ---
{
  "memories": [],
  "total": 0
}
--- stderr ---
