crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_filter_without_signal_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"filter\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode filter
exit: 1
--- stdout ---
--- stderr ---
Error: Validation error: mode=filter requires at least one of: query, logical, path, tags
