crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_invalid_mode_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"sideways\", \"--query\", \"rust\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode sideways --query rust
exit: 2
--- stdout ---
--- stderr ---
error: invalid value 'sideways' for '--mode <MODE>'
  [possible values: rank, filter]

For more information, try '--help'.
